--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "financial-app",
   "version": "1.0.0",
-  "description": "Financial Services Application",
+  "description": "A comprehensive financial management application",
+  "main": "index.js",
   "scripts": {
-    "start": "cd client && npm start",
+    "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm run dev",
-    "dev": "concurrently \"npm run server\" \"npm start\"",
-    "install-all": "npm install && cd client && npm install && cd ../server && npm install"
+    "client": "cd client && npm start",
+    "install-all": "npm install && cd server && npm install && cd ../client && npm install"
   },
   "dependencies": {
-    "concurrently": "^8.0.1"
+    "concurrently": "^8.2.2"
   }
-} 
+}
