--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
-    "@ant-design/plots": "^2.3.3",
+    "@ant-design/plots": "^1.2.6",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "agora-rtc-react": "^2.3.0",
     "antd": "^5.4.6",
-    "axios": "^1.4.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
