--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "install-all": "npm install && cd server && npm install && cd ../client && npm install"
   },
   "dependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "moment": "^2.30.1",
+    "mongoose": "^8.12.1",
+    "multer": "^1.4.5-lts.1",
+    "node-schedule": "^2.1.1",
+    "nodemailer": "^6.10.0"
   }
 }
