--- a/server/package.json
+++ b/server/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.8.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.11.2",
     "express-validator": "^7.0.1",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.16.0",
     "pg": "^8.11.0",
+    "razorpay": "^2.9.6",
     "sequelize": "^6.32.0",
     "sqlite3": "^5.1.7",
     "validator": "^13.9.0"
