--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "Backend for Financial App",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "seed": "node src/seeds/seedCreditCards.js"
   },
   "dependencies": {
@@ -17,9 +17,14 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.11.2",
     "express-validator": "^7.0.1",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "^9.0.0",
     "moment": "^2.30.1",
+    "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.16.0",
     "pg": "^8.11.0",
     "razorpay": "^2.9.6",
