--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "Backend for Financial App",
   "main": "src/index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "seed": "node src/seeds/seedCreditCards.js"
   },
   "dependencies": {
