--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,13 @@
     "aws-sdk": "^2.1692.0",
     "axios": "^1.8.2",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.11.2",
     "express-validator": "^7.0.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.30.1",
     "mongoose": "^7.0.3",
@@ -29,7 +31,7 @@
     "razorpay": "^2.9.6",
     "sequelize": "^6.32.0",
     "sqlite3": "^5.1.7",
-    "validator": "^13.9.0"
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
