--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "financial-app-client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@ant-design/icons": "^4.8.3",
     "@ant-design/plots": "^1.2.6",
@@ -9,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@zoomus/websdk": "^2.18.3",
     "agora-rtc-react": "^2.3.0",
     "antd": "^5.3.0",
     "axios": "^1.3.4",
@@ -23,7 +25,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "cross-env DANGEROUSLY_DISABLE_HOST_CHECK=true HOST=0.0.0.0 PORT=5000 react-scripts start",
+    "start": "cross-env DANGEROUSLY_DISABLE_HOST_CHECK=true HOST=0.0.0.0 PORT=3005 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
