--- a/server/package.json
+++ b/server/package.json
@@ -17,18 +17,22 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.11.2",
     "express-validator": "^7.0.1",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.3",
+    "jwa": "^2.0.1",
     "moment": "^2.30.1",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
+    "openai": "^6.16.0",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdf-parse": "^2.4.5",
     "pdfkit": "^0.16.0",
     "razorpay": "^2.9.6",
     "sequelize": "^6.32.0",
     "sqlite3": "^5.1.7",
+    "tesseract.js": "^7.0.0",
     "validator": "^13.9.0"
   },
   "devDependencies": {
